--- a/jqdialog.css
+++ b/jqdialog.css
@@ -6,13 +6,13 @@ body {
 	font-size: 14px;
 	color: #333;
 }
-		
+
 #main {
 	background: #fff;
 	margin: 30px auto 0 auto;
 	padding: 20px;
 	width: 900px;
-	
+
 	box-shadow: 0 0 10px #ddd;
 }
 
@@ -39,14 +39,21 @@ a:hover {
 }
 
 
-
+#jqDialog_overlay{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+}
 #jqDialog_box {
 	background: #f5f5f5;
 	position: absolute;
 	width: 450px;
 	height: 150px;
 	font-family: Arial;
-	
+
 	border-width: 1px 3px 3px 1px;
 	border-style: solid;
 	border-color: #ccc;
@@ -55,7 +62,7 @@ a:hover {
 	-webkit-border-radius: 6px;
 	-khtml-border-radius: 6px;
 	border-radius: 6px;
-	
+
 	-moz-box-shadow: 0 0 30px #e6e6e6;
 }
 #jqDialog_content {
@@ -79,9 +86,9 @@ a:hover {
 	font-size: 1.5em;
 	color: #fff;
 	width: auto;
-	
+
 	cursor: pointer;
-	
+
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	-khtml-border-radius: 3px;
