--- a/jqdialog.css
+++ b/jqdialog.css
@@ -46,12 +46,15 @@ a:hover {
 	width: 100%;
 	height: 100%;
 	z-index: 1000;
+	background-color: rgba(0,0,0,.75);
 }
 #jqDialog_box {
 	background: #f5f5f5;
 	position: absolute;
 	width: 450px;
 	height: 150px;
+	left: 50%;
+	top: 50%;
 	font-family: Arial;
 
 	border-width: 1px 3px 3px 1px;
@@ -64,6 +67,9 @@ a:hover {
 	border-radius: 6px;
 
 	-moz-box-shadow: 0 0 30px #e6e6e6;
+}
+#jqDialog_box{
+	position: fixed;
 }
 #jqDialog_content {
 	margin: 10px;
